fixing to integrate with backstage catalog
