# handlers/handlers.go
@@ -16,12 +16,14 @@ import (
 	"github.com/jackc/pgx/v5/pgtype"
 )
 
+var initalSize = 10
+
 // Handler is the struct that contains the implementation of the API handlers.
 type Handler struct{}
 
-// UsersYamlGet implements the users.yaml GET method of the API
+// UsersGet implements the users.yaml GET method of the API
 // This returns a list of users in the system.
-func (t *Handler) UsersYamlGet(ctx context.Context) (*api.User, error) {
+func (t *Handler) UsersGet(ctx context.Context) ([]api.Entity, error) {
 	c := config.GetConf()
 	u := user.New(c.Pool)
 	c.Logger.Info("listing users")
@@ -30,22 +32,34 @@ func (t *Handler) UsersYamlGet(ctx context.Context) (*api.User, error) {
 		c.Logger.Error("error listing users", "error", err)
 		return nil, err404
 	}
-	var users []api.User
+	var users []api.Entity
 	for _, v := range list {
-		meta := make(api.UserMetadata)
-		meta["name"] = v.Name
-		spec := make(api.UserSpec)
-		spec["memberOf"] = api.NewStringArrayUserSpecItem([]string{"guests"})
-		users = append(users, api.User{
+		meta := make(api.StringOrArray, initalSize)
+		meta["name"] = api.NewStringStringOrArrayItem(v.Name)
+		meta["namespace"] = api.NewStringStringOrArrayItem("baconator")
+		profile := make(map[string]string, initalSize)
+		profile["email"] = "baconator@bacon.com"
+		profile["avatarUrl"] = "https://baconator.com/avatar.png"
+		profile["displayName"] = "Baconator Son of Bacon"
+		spec := make(api.StringOrArray, initalSize)
+		meta["profile"] = api.NewStringOrArrayItem2StringOrArrayItem(profile)
+		annotation := make(map[string]string, initalSize)
+		annotation["backstage.io/managed-by-location"] = fmt.Sprintf("url:http://baconator:8081/user/%d", v.ID)
+		annotation["backstage.io/managed-by"] = "baconator"
+		annotation["backstage.io/managed-by-origin-location"] = fmt.Sprintf("url:http://baconator:8081/user/%d", v.ID)
+		meta["annotations"] = api.NewStringOrArrayItem2StringOrArrayItem(annotation)
+		spec["memberOf"] = api.NewStringArrayStringOrArrayItem([]string{"default/guests"})
+
+		users = append(users, api.Entity{
 			ApiVersion: api.NewOptString("backstage.io/v1alpha1"),
 			Kind:       api.NewOptString("User"),
-			Metadata:   api.NewOptUserMetadata(meta),
-			Spec:       api.NewOptUserSpec(spec),
+			Metadata:   api.NewOptStringOrArray(meta),
+			Spec:       api.NewOptStringOrArray(spec),
 		})
 	}
 	c.Logger.Info("listing users", "users", users)
-	return &users[0], nil
-	// return users, nil
+	// return &users[0], nil
+	return users, nil
 }
 
 var err404 = &api.ErrorStatusCode{
@@ -58,18 +72,30 @@ var err404 = &api.ErrorStatusCode{
 
 // UserPatch implements the User Patch method of the API
 // This is the implementation of the Patch method for the /user endpoint.
-func (t *Handler) UserPatch(ctx context.Context, req *api.User) (*api.User, error) {
+func (t *Handler) UserPatch(ctx context.Context, req *api.Entity) (*api.Entity, error) {
 	// TODO implement me
 	panic("implement me")
 }
 
 // UserPost implements the User POST method of the API
 // This is the implementation of the POST method for the /user endpoint.
-func (t *Handler) UserPost(ctx context.Context, req *api.User) (*api.User, error) {
+func (t *Handler) UserPost(ctx context.Context, req *api.Entity) (*api.Entity, error) {
 	c := config.GetConf()
 	u := user.New(c.Pool)
+	m, ok := req.Metadata.Get()
+
+	if !ok {
+		c.Logger.Error("name missing")
+		return nil, err404
+	}
+	n := m["name"]
+	name, ok := n.GetString()
+	if !ok {
+		c.Logger.Error("name is array")
+		return nil, err404
+	}
 	r, err := u.CreateUser(context.Background(), user.CreateUserParams{
-		Name: req.Name.Value,
+		Name: name,
 		Uuid: pgtype.UUID{
 			Bytes: uuid.New(),
 			Valid: true,
@@ -79,18 +105,21 @@ func (t *Handler) UserPost(ctx context.Context, req *api.User) (*api.User, error
 		c.Logger.Error("error creating user", "error", err)
 		return nil, err404
 	}
-	return &api.User{
-		Name: api.NewOptString(r.Name),
-		ID: api.OptInt64{
-			Value: r.ID,
-			Set:   true,
-		},
-	}, nil
+	meta := make(api.StringOrArray, initalSize)
+	meta["name"] = api.NewStringStringOrArrayItem(r.Name)
+
+	entity := &api.Entity{
+		ApiVersion: api.NewOptString("backstage.io/v1alpha1"),
+		Kind:       api.NewOptString("User"),
+		Metadata:   api.NewOptStringOrArray(meta),
+		Spec:       api.NewOptStringOrArray(nil),
+	}
+	return entity, nil
 }
 
 // UsersUserIdGet implements the UsersUserId GET method of the API
 // This is the implementation of the GET method for the /users/{userId} endpoint.
-func (t *Handler) UsersUserIdGet(ctx context.Context, params api.UsersUserIdGetParams) (*api.User, error) {
+func (t *Handler) UsersUserIdGet(ctx context.Context, params api.UsersUserIdGetParams) (*api.Entity, error) {
 	c := config.GetConf()
 	u := user.New(c.Pool)
 	f, err := u.GetUser(context.Background(), params.UserId)
@@ -98,13 +127,17 @@ func (t *Handler) UsersUserIdGet(ctx context.Context, params api.UsersUserIdGetP
 		c.Logger.Error("error getting user", "errror", err)
 		return nil, err404
 	}
-	return &api.User{
-		Name: api.NewOptString(f.Name),
-		ID: api.OptInt64{
-			Value: f.ID,
-			Set:   false,
-		},
-	}, nil
+	meta := make(api.StringOrArray, initalSize)
+	meta["name"] = api.NewStringStringOrArrayItem(f.Name)
+
+	entity := &api.Entity{
+		ApiVersion: api.NewOptString("backstage.io/v1alpha1"),
+		Kind:       api.NewOptString("User"),
+		Metadata:   api.NewOptStringOrArray(meta),
+		Spec:       api.NewOptStringOrArray(nil),
+	}
+
+	return entity, nil
 }
 
 // ResourcesPost implements the Resources POST method of the API.
@@ -157,11 +190,21 @@ func (t *Handler) ListResourceTypesGet(ctx context.Context) (resp *api.Resource,
 }
 
 // WhoamiGet implements the Whoami GET method of the API.
-func (t *Handler) WhoamiGet(ctx context.Context) (*api.User, error) {
+func (t *Handler) WhoamiGet(ctx context.Context) (*api.Entity, error) {
 	email, ok := ctx.Value("email").(string)
 	if !ok {
 		err := t.NewError(ctx, fmt.Errorf("email missing"))
 		return nil, err
 	}
-	return &api.User{Name: api.NewOptString(email)}, nil
+	meta := make(api.StringOrArray, initalSize)
+	meta["name"] = api.NewStringStringOrArrayItem(email)
+
+	entity := &api.Entity{
+		ApiVersion: api.NewOptString("backstage.io/v1alpha1"),
+		Kind:       api.NewOptString("User"),
+		Metadata:   api.NewOptStringOrArray(meta),
+		Spec:       api.NewOptStringOrArray(nil),
+	}
+
+	return entity, nil
 }
