# openapi.yaml
@@ -18,7 +18,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/User'
+                $ref: '#/components/schemas/entity'
         default:
           description: Unexpected error
           content:
@@ -44,14 +44,14 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/User'
+                $ref: '#/components/schemas/entity'
         default:
           description: Unexpected error
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
-  /users.yaml:
+  /users:
     get:
       description: "return all users"
       security:
@@ -63,7 +63,9 @@ paths:
           content:
             application/json:
               schema:
-                  $ref: '#/components/schemas/User'
+                type: array
+                items:
+                  $ref: '#/components/schemas/entity'
         default:
           description: Unexpected error
           content:
@@ -80,14 +82,14 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/User'
+              $ref: '#/components/schemas/entity'
       responses:
         200:
           description: Success
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/User'
+                $ref: '#/components/schemas/entity'
         default:
           description: Unexpected error
           content:
@@ -104,14 +106,14 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/User'
+              $ref: '#/components/schemas/entity'
       responses:
         200:
           description: Success
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/User'
+                $ref: '#/components/schemas/entity'
         default:
           description: Unexpected error
           content:
@@ -189,13 +191,8 @@ components:
         message:
           type: string
       type: object
-    User:
-      required:
+    entity:
       properties:
-        id:
-          type: integer
-          format: int64
-          example: 1
         apiVersion:
           type: string
           default: "backstage.io/v1alpha1"
@@ -203,24 +200,9 @@ components:
             type: string
             default: "User"
         metadata:
-          type: object
-          additionalProperties:
-            type: string
+          $ref: "#/components/schemas/stringOrArray"
         spec:
-          type: object
-          additionalProperties:
-            oneOf:
-              - type: string
-              - type: array
-                items:
-                  type: string
-        name:
-          type: string
-          example: bob
-        uuid:
-          type: string
-          format: uuid
-          example: 123e4567-e89b-12d3-a456-426614174000
+          $ref: '#/components/schemas/stringOrArray'
       type: object
     Resource:
       required:
@@ -239,26 +221,38 @@ components:
       required:
         - name
         - description
-        - default
       properties:
+        name:
+          type: string
+          example: bucketName
+        description:
+          type: string
+          example: name of the bucket
+        type:
+            type: string
+            example: string
         apiVersion:
           type: string
           default: "backstage.io/v1alpha1"
         kind:
             type: string
             default: "User"
-        name:
-          type: string
-        description:
-          type: string
         metadata:
-          type: object
-          additionalProperties:
-            type: string
-        type:
-          type: string
-        value:
-          type: string
+          $ref: "#/components/schemas/stringOrArray"
+        spec:
+          $ref: '#/components/schemas/stringOrArray'
       type: object
+    stringOrArray:
+      type: object
+      additionalProperties:
+        oneOf:
+          - type: string
+          - type: array
+            items:
+              type: string
+          - type: object
+            additionalProperties:
+              type: string
+
 
   
